--- a/pages/select.html
+++ b/pages/select.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <a href="../home.html">
+    <a href="../index.html">
       <img src="../photo/icon.svg" alt="GridPIX" class="icon" />
     </a>
     <div id="hamburger" aria-label="メニューを開く" aria-expanded="false" role="button" tabindex="0">
