Fix typo in select.svg

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img src="photo/GRID.svg" alt="GRID" width="300px">
         </a>
         <a href="pages/select.html" class="select">
-            <img src="photo/SERECT.svg" alt="SERECT" width="300px">
+            <img src="photo/SELECT.svg" alt="SELECT" width="300px">
         </a>
         <a href="pages/filter.html" class="filter">
             <img src="photo/FILTER.svg" alt="FILTER" width="300px">
